force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/Opportunities_Analytic_Snapshot_del__c.object-meta.xml
<CustomObject>
    <label>Opportunity Analytic Snapshot</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunities Analytic Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>