force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Business_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Customer_Type__c</fullName>
    <label>Business/Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business to New Customers</fullName>
            </value>
            <value>
                <fullName>New Business to Existing Customers</fullName>
            </value>
            <value>
                <fullName>Existing Business to Existing Customers</fullName>
            </value>
            <value>
                <fullName>Replacement Product to Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>