force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>