force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Opportunity_Owner_del__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_del__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>