force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Opportunity_Record_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_del__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>