force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aesculap</fullName>
            </value>
            <value>
                <fullName>Ai-medic</fullName>
            </value>
            <value>
                <fullName>Alpha Consulting Group</fullName>
            </value>
            <value>
                <fullName>B.Braun</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Corin</fullName>
            </value>
            <value>
                <fullName>DePuy</fullName>
            </value>
            <value>
                <fullName>Encore</fullName>
            </value>
            <value>
                <fullName>Exactech</fullName>
            </value>
            <value>
                <fullName>GE Healthcare Performance Solutions</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Hunter &amp; Associates</fullName>
            </value>
            <value>
                <fullName>JMM</fullName>
            </value>
            <value>
                <fullName>Life Health Care</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>LMA PacMed</fullName>
            </value>
            <value>
                <fullName>Marshall Steele</fullName>
            </value>
            <value>
                <fullName>Marshall Steele &amp; Associates</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>Medacta</fullName>
            </value>
            <value>
                <fullName>Mizuho</fullName>
            </value>
            <value>
                <fullName>MMT</fullName>
            </value>
            <value>
                <fullName>Nakashima</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Nuvasive</fullName>
            </value>
            <value>
                <fullName>ODC</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Advantage</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Advantage Healthcare Consulting LLC</fullName>
            </value>
            <value>
                <fullName>Orthotech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>