force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Primary_Sales_Associate__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Associate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Sales Associate</label>
    <length>120</length>
    <type>Text</type>
</CustomField>