force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <type>TextArea</type>
</CustomField>