force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/RVP_Name_custom__c.field-meta.xml
<CustomField>
    <fullName>RVP_Name_custom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RVP Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>