force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Sales_VP__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales VP</label>
    <length>120</length>
    <type>Text</type>
</CustomField>