force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Approached</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Phase0</fullName>
            </value>
            <value>
                <fullName>Phase1</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Identification/Qualification</fullName>
            </value>
            <value>
                <fullName>Interested-Issue Discovery,Pain/Gain</fullName>
            </value>
            <value>
                <fullName>Phase2</fullName>
            </value>
            <value>
                <fullName>Erwartung</fullName>
            </value>
            <value>
                <fullName>Potenzialanalyse</fullName>
            </value>
            <value>
                <fullName>Phase3</fullName>
            </value>
            <value>
                <fullName>Id. Decision Makers</fullName>
            </value>
            <value>
                <fullName>Phone call scheduled</fullName>
            </value>
            <value>
                <fullName>Workshop/Med Ed Event</fullName>
            </value>
            <value>
                <fullName>Phase4</fullName>
            </value>
            <value>
                <fullName>Bedarfsanalyse Analyse</fullName>
            </value>
            <value>
                <fullName>Produktvorstellung</fullName>
            </value>
            <value>
                <fullName>Proposal/Assessment</fullName>
            </value>
            <value>
                <fullName>Agreed to Book</fullName>
            </value>
            <value>
                <fullName>Initial Discussion</fullName>
            </value>
            <value>
                <fullName>Meeting scheduled</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Phase5</fullName>
            </value>
            <value>
                <fullName>Training/Trial</fullName>
            </value>
            <value>
                <fullName>1st Case</fullName>
            </value>
            <value>
                <fullName>Angebot</fullName>
            </value>
            <value>
                <fullName>Wertangebot</fullName>
            </value>
            <value>
                <fullName>Presentation Made</fullName>
            </value>
            <value>
                <fullName>Highly Likely to Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>