force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Strategic_Target__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Target</label>
    <type>Checkbox</type>
</CustomField>