force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Sub_segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_segment__c</fullName>
    <label>Sub-segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>THA</fullName>
            </value>
            <value>
                <fullName>BHP</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>‐</fullName>
            </value>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Blood Management</fullName>
            </value>
            <value>
                <fullName>Bone Cement &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Cable Products</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>External Fixation</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>IM Nails</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Orthobiologics</fullName>
            </value>
            <value>
                <fullName>Other Trauma</fullName>
            </value>
            <value>
                <fullName>Plates &amp; Screws</fullName>
            </value>
            <value>
                <fullName>Power Tools &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Pre-TKA</fullName>
            </value>
            <value>
                <fullName>Primary Hip</fullName>
            </value>
            <value>
                <fullName>Primary Knee</fullName>
            </value>
            <value>
                <fullName>Revision Hip</fullName>
            </value>
            <value>
                <fullName>Revision Knee</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Skin Graft Product</fullName>
            </value>
            <value>
                <fullName>Soft Goods, Braces &amp; Supports</fullName>
            </value>
            <value>
                <fullName>Tourniquet Systems</fullName>
            </value>
            <value>
                <fullName>Traction</fullName>
            </value>
            <value>
                <fullName>Trauma-Orthobiologics</fullName>
            </value>
            <value>
                <fullName>Wound Debridement</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>