force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Surgeon_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Name_del__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surgeon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>