force-app/main/default/objects/Opportunities_Analytic_Snapshot_del__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Other</fullName>
            </value>
            <value>
                <fullName>Bestehendes Geschäft</fullName>
            </value>
            <value>
                <fullName>Care Coordination</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Disease Specific Certification</fullName>
            </value>
            <value>
                <fullName>Implant Placement-Bulk Implant Order</fullName>
            </value>
            <value>
                <fullName>Implant Placement- Bulk Implant Order</fullName>
            </value>
            <value>
                <fullName>Implant Placement- Drill Stops</fullName>
            </value>
            <value>
                <fullName>Implant Placement- ERA Mini</fullName>
            </value>
            <value>
                <fullName>Implant Placement- Guided Surgery Drills</fullName>
            </value>
            <value>
                <fullName>Implant Placement- Motor/Handpiece</fullName>
            </value>
            <value>
                <fullName>Implant Placement- Spoons</fullName>
            </value>
            <value>
                <fullName>Implant Placement- Surgical Kit</fullName>
            </value>
            <value>
                <fullName>Implant Placement-Tube Adapters</fullName>
            </value>
            <value>
                <fullName>Implant Placement-ZI Restorative Deal</fullName>
            </value>
            <value>
                <fullName>Implant Placement-ZI Surgical Deal</fullName>
            </value>
            <value>
                <fullName>Implants</fullName>
            </value>
            <value>
                <fullName>Instruments and Tools</fullName>
            </value>
            <value>
                <fullName>Joint Assess</fullName>
            </value>
            <value>
                <fullName>Joint Implementation</fullName>
            </value>
            <value>
                <fullName>MSK - LTA</fullName>
            </value>
            <value>
                <fullName>MSK - SLDP</fullName>
            </value>
            <value>
                <fullName>Neues Geschäft</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Perioperative Assess</fullName>
            </value>
            <value>
                <fullName>Perioperative - LTA</fullName>
            </value>
            <value>
                <fullName>Physician Practice</fullName>
            </value>
            <value>
                <fullName>Regenerative</fullName>
            </value>
            <value>
                <fullName>Regenerative- Capsule</fullName>
            </value>
            <value>
                <fullName>Regenerative- DBM Putty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>